# arab

./: .env  .gitignore  Cargo.toml  yt-dlp
migrations/: 20230717111129_tetr_users.sql  20230729082943_tetr_users.sql
src/: main.rs  test.rs  utils.rs
src/commands/: misc.rs  mod.rs  osu.rs  tetr.rs  voice.rs
src/db/: mod.rs  tetr_user.rs
